[tool.poetry]
name = "XTestRunner"
version = "1.8.5"
description = "Modern style test report based on unittest framework."
authors = ["bugmaster <fnngj@126.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/seldomQA/XTestRunner/"
repository = "https://github.com/seldomQA/XTestRunner/"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    "Topic :: Software Development :: Testing",
    'Topic :: Software Development :: Version Control :: Git'
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
jinja2 = "^3.1.6"
requests = ">=2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
